added categories and tags

--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -1,6 +1,8 @@
 items:
+  - data
+  - change-management
+  - Covid19
+  - fintech
   - leadership
   - self-improvement
-  - change
   - writing
-  - data
