--- a/admin/config.yml
+++ b/admin/config.yml
@@ -8,7 +8,12 @@ backend:
 
 # when using the default proxy server port
 local_backend:
-  allowed_hosts: ["ca447c05fbb743779c1482e6a4e5e691.vfs.cloud9.us-east-2.amazonaws.com", 'localhost', '127.0.0.1', '0.0.0.0','amazonaws.com', 'ca447c05fbb743779c1482e6a4e5e691.vfs.cloud9.us-east-2.amazonaws.com']
+  allowed_hosts: 
+    - 'localhost'
+    - '127.0.0.1'
+    - '0.0.0.0'
+    - '18.217.184.111'
+    - 'ca447c05fbb743779c1482e6a4e5e691.vfs.cloud9.us-east-2.amazonaws.com'
   url: "http://18.217.184.111:8080/api/v1" #Used when developing in AWS c9 / otherwise comment out
 
 media_folder: 'assets/uploads'
@@ -33,27 +38,18 @@ collections:
         widget: 'relation'
         collection: "config"
         file: 'categories'
-        # display_fields: ["items.*.category"]
         search_fields: ["items.*"]
         value_field: "items.*"
+        
       - label: 'Tags'
         name: 'tags'
         widget: 'relation'
         collection: "config"
         file: 'tags'
         multiple: true
-        # display_fields: ["items.*.category"]
         search_fields: ["items.*"]
         value_field: "items.*"
-      # - label: 'Category'
-      #   name: 'category'
-      #   widget: 'select'
-      #   options:
-      #     - 'leadership'
-      #     - 'data'
-      #     - 'fintech'
-      #     - 'payments'
-      #     - 'product management'
+        
       - label: 'Author'
         name: 'author'
         widget: 'relation'
@@ -61,6 +57,7 @@ collections:
         display_fields: [name]
         search_fields: [name]
         value_field: 'name'
+        
       - label: 'Image'
         name: 'image'
         widget: 'object'
@@ -69,14 +66,11 @@ collections:
           - {label: 'Author', name: 'author', widget: 'string'}
           - {label: 'Source  site', name: 'source', widget: 'string'}
           - {label: 'Source  URL', name: 'url', widget: 'string'}
-      # - label: 'Tags'
-      #   name: 'tags'
-      #   widget: 'list'
-      #   summary: '{{fields.tag}}'
-      #   field: {label: 'tag', name: 'tag', widget: 'string'}
+          
       - {label: 'Comments allowed', name: 'comments', widget: 'boolean', default: true}
       - {label: 'Summary', name: 'summary', widget: 'text'}
       - {label: 'Permalink', name: 'permalink', widget: 'string', default: null, required: false}
+      
       - label: 'Body'
         name: 'body'
         widget: 'markdown'
@@ -106,6 +100,7 @@ collections:
           11. One final look for readability. Does it your inviting /easy to scan? Sorry paragraphs and bold subheads, lists bulleted/numbered. Avoid impenetrable chunky text
 
           12. Publish but ask one more question. What next? Read more? Subscribe? But something?
+          
       - {label: 'SEO description', name: 'description', widget: 'text', required: false}
       - {label: 'SEO keywords', name: 'keywords', widget: 'string', required: false}
   
@@ -118,15 +113,15 @@ collections:
       - {label: 'Layout', name: 'layout', widget: 'hidden', default: 'bio'}
       - {label: 'Short name', name: 'short_name', widget: 'string'}
       - {label: 'Name', name: 'name', widget: 'string'}
-      - {label: 'Position', name: 'position', widget: 'string'}
+      - {label: 'Position', name: 'position', widget: 'string', required: false}
       - label: 'social'
         name: 'social'
         widget: 'object'
         collapsed: true
         fields:
-          - {label: 'LinkedIn', name: 'linkedin', widget: 'string'}
-          - {label: 'Twitter', name: 'twitter', widget: 'string'}
-          - {label: 'medium', name: 'medium', widget: 'string'}
+          - {label: 'LinkedIn', name: 'linkedin', widget: 'string', required: false}
+          - {label: 'Twitter', name: 'twitter', widget: 'string', required: false}
+          - {label: 'medium', name: 'medium', widget: 'string', required: false}
       - {label: 'Email', name: 'email', widget: 'string'}
       - {label: 'Image', name: 'image', widget: 'image'}
       - {label: 'Summary', name: 'summary', widget: 'text'}
@@ -141,6 +136,7 @@ collections:
       - {label: 'Layout', name: 'layout', widget: 'hidden', default: 'page'}
       - {label: 'Title', name: 'title', widget: 'string'}
       - {label: 'Subtitle', name: 'subtitle', widget: 'string'}
+      
       - label: 'Date'
         name: 'date'
         widget: 'datetime'
@@ -148,8 +144,9 @@ collections:
         time_format: 'HH:mm' # e.g. 21:07
         format: 'LLL'
         picker_utc: false
+        
       - {label: 'Body', name: 'body', widget: 'markdown'}
-      - {label: 'Permalink', name: 'permalink', widget: 'string'}
+      - {label: 'Permalink', name: 'permalink', widget: 'string', default: null}
       - {label: 'SEO description', name: 'description', widget: 'text', required: false}
       - {label: 'SEO keywords', name: 'keywords', widget: 'string', required: false}
 
@@ -169,6 +166,7 @@ collections:
             fields:
               - {label: Name, name: name, widget: string}
               - {label: Link, name: link, widget: string}
+              
       - label: 'Tags'
         name: 'tags'
         file: '_data/tags.yml'
@@ -178,6 +176,7 @@ collections:
             widget: 'list'
             summary: '{{fields.tag}}'
             field: {label: Tag, name: tag, widget: string}
+            
       - label: 'Categories'
         name: 'categories'
         file: '_data/categories.yml'
