Updated pages and article metadata

--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -1,8 +1,24 @@
 items:
+  - API
+  - anti-money-laundering
   - data
+  - data-value-exchange
+  - data-driven
+  - change
   - change-management
-  - Covid19
+  - counter-terrorism-funding
+  - covid19
+  - crm
+  - customer-lifecycle
   - fintech
+  - future
   - leadership
+  - PCIDSS
+  - product-design
+  - remote-work
   - self-improvement
+  - software-development-lifecycle
+  - strategy
+  - support
+  - work-from-home
   - writing
