Update Config “tags”

--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -22,3 +22,12 @@ items:
   - support
   - work-from-home
   - writing
+  - GDPR
+  - cyber-security
+  - crypto-lockering
+  - data-breach
+  - ransomware
+  - PII
+  - human-resources
+  - management
+  - execution
