--- a/admin/config.yml
+++ b/admin/config.yml
@@ -24,6 +24,8 @@ editor:
 collections:
 
   - name: 'Posts' # Used in routes, e.g. /admin/collections/blog
+    editor:
+      preview: true
     label: 'Posts' # Used in the UI
     folder: '_posts/' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
