--- a/admin/config.yml
+++ b/admin/config.yml
@@ -34,6 +34,15 @@ collections:
       - {label: 'Title', name: 'title', widget: 'string'}
       - {label: 'Subtitle', name: 'subtitle', widget: 'string', required: false}
       - {label: 'Published', name: published, widget: 'boolean', default: true }
+      
+      - label: 'Date'
+        name: 'date'
+        widget: 'datetime'
+        date_format: 'YYYY-MM-DD' # e.g. 24.12.2021
+        time_format: 'HH:mm' # e.g. 21:07
+        format: 'LLL'
+        picker_utc: false
+      
       - label: 'Category'
         name: 'category'
         widget: 'relation'
