--- a/admin/config.yml
+++ b/admin/config.yml
@@ -33,7 +33,7 @@ collections:
       - {label: 'Layout', name: 'layout', widget: 'hidden', default: 'post'}
       - {label: 'Title', name: 'title', widget: 'string'}
       - {label: 'Subtitle', name: 'subtitle', widget: 'string', required: false}
-      - {label: 'Published', name: published, widget: 'boolean', default: true, required: false }
+      # - {label: 'Published', name: published, widget: 'boolean', default: true, required: false }
       
       - label: 'Date'
         name: 'date'
