--- a/admin/config.yml
+++ b/admin/config.yml
@@ -27,13 +27,13 @@ collections:
     label: 'Posts' # Used in the UI
     folder: '_posts/' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    preview_path: '{{permalink}}'
+    preview_path: '{{year}}/{{month}}/{{day}}/{{ title | slugify }}'
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}' # Filename template i.e. YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: 'Layout', name: 'layout', widget: 'hidden', default: 'post'}
       - {label: 'Title', name: 'title', widget: 'string'}
       - {label: 'Subtitle', name: 'subtitle', widget: 'string', required: false}
-      # - {label: 'Published', name: published, widget: 'boolean', default: true, required: false }
+      - {label: 'Published', name: published, widget: 'boolean', default: true, required: false }
       
       - label: 'Date'
         name: 'date'
