--- a/admin/config.yml
+++ b/admin/config.yml
@@ -19,7 +19,7 @@ local_backend:
 media_folder: 'assets/uploads'
 publish_mode: editorial_workflow
 editor:
-  preview: false
+  preview: true
 
 collections:
 
@@ -27,12 +27,22 @@ collections:
     label: 'Posts' # Used in the UI
     folder: '_posts/' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
+    preview_path: '{{year}}/{{month}}/{{day}}/{{title}}'
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}' # Filename template i.e. YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: 'Layout', name: 'layout', widget: 'hidden', default: 'post'}
       - {label: 'Title', name: 'title', widget: 'string'}
       - {label: 'Subtitle', name: 'subtitle', widget: 'string', required: false}
-      - {label: 'Published', name: published, widget: 'boolean', default: true }
+      - {label: 'Published', name: published, widget: 'boolean', default: true, required: false }
+      
+      - label: 'Date'
+        name: 'date'
+        widget: 'datetime'
+        date_format: 'YYYY-MM-DD' # e.g. 24.12.2021
+        time_format: 'HH:mm' # e.g. 21:07
+        format: 'LLL'
+        picker_utc: false
+      
       - label: 'Category'
         name: 'category'
         widget: 'relation'
@@ -113,7 +123,7 @@ collections:
       - {label: 'Layout', name: 'layout', widget: 'hidden', default: 'page'}
       - {label: 'Title', name: 'title', widget: 'string'}
       - {label: 'Subtitle', name: 'subtitle', widget: 'string', required: false}
-      - {label: 'Published', name: published, widget: 'boolean', default: true }
+      - {label: 'Published', name: published, widget: 'boolean', default: true, required: false }
       
       - label: 'Date'
         name: 'date'
@@ -139,7 +149,7 @@ collections:
       - {label: 'Short name', name: 'short_name', widget: 'string'}
       - {label: 'Name', name: 'name', widget: 'string'}
       - {label: 'Position', name: 'position', widget: 'string', required: false}
-      - {label: 'Published', name: published, widget: 'boolean', default: true }
+      - {label: 'Published', name: published, widget: 'boolean', default: true, required: false }
       - label: 'social'
         name: 'social'
         widget: 'object'
