--- a/admin/config.yml
+++ b/admin/config.yml
@@ -27,7 +27,7 @@ collections:
     label: 'Posts' # Used in the UI
     folder: '_posts/' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    preview_path: '{{year}}/{{month}}/{{day}}/{{slug}}'
+    preview_path: '{{year}}/{{month}}/{{day}}/{{title}}'
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}' # Filename template i.e. YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: 'Layout', name: 'layout', widget: 'hidden', default: 'post'}
