--- a/admin/config.yml
+++ b/admin/config.yml
@@ -27,7 +27,7 @@ collections:
     label: 'Posts' # Used in the UI
     folder: '_posts/' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    preview_path: '{{year}}/{{month}}/{{day}}/{{title}}'
+    preview_path: '{{category}}/{{year}}/{{month}}/{{day}}/{{title}}'
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}' # Filename template i.e. YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: 'Layout', name: 'layout', widget: 'hidden', default: 'post'}
@@ -41,7 +41,7 @@ collections:
         date_format: 'YYYY-MM-DD' # e.g. 24.12.2021
         time_format: 'HH:mm' # e.g. 21:07
         format: 'YYYY-MM-DD HH:mm:ss +1000'
-        picker_utc: false
+        picker_utc: true
         
       
       - label: 'Category'
