redirect 404 moved article

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,6 +13,11 @@
   force = true
   status = 302
   
+[[redirects]]
+  from = "/product-management/2020/12/31/start-your-passion-project-immediately"
+  to = "/product-management/2021/03/28/start-your-passion-project-immediately"
+  force = true
+  status = 301
 
 # [[redirects]]
 #   from = "/*"
